<resources>
    <string name="app_name">App3Stelle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">I Miei Ordini</string>
    <string name="menu_coupons">I Miei Coupon</string>
    <string name="menu_out">Esci</string>
    <string name="message_freeUmbrella">Vuoi avvisare che non utilizzerai il tuo
        ombrellone per qualche giorno? In cambio riceverei dei buoni utilizzabili
    presso il bar</string>

    <string name="message_updateOrder">Vuoi segnare lo stato dell\' ordine come "In Preparazione"?</string>
    <string name="message_completeOrder">Vuoi segnare lo stato dell\' ordine come "Pronto"?</string>
    <string name="message_sendedOrder">Ordine Inviato</string>

    <string name="beer">Birre</string>
    <string name="drinks">Cocktails</string>
    <string name="coffee">Caffè</string>

    <string name="single">Singolo</string>
    <string name="carafe">Caraffa</string>
    <string name="cup">Tazza</string>

    <string name="lettini">Lettino</string>
    <string name="bar">Bar</string>
</resources>