<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_coupon"
            android:icon="@drawable/baseline_discount_24"
            android:title="@string/menu_coupons" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_out" />
    </group>
</menu>