<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.app3stelle.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.app3stelle.ui.gallery.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_coupon"
        android:name="com.example.app3stelle.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_coupons"
        tools:layout="@layout/fragment_coupons" />

    <activity
        android:id="@+id/nav_logOut"
        android:name="com.example.app3stelle.ui.login.LoginActivity"
        android:label="@string/menu_out"
        tools:layout="@layout/login_layout" />
</navigation>