<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutCategory"
        android:layout_width="408dp"
        android:layout_height="83dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/cocktailTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_local_bar_24"
            android:text="@string/drinks"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="51dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/beerTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_beer"
            android:text="@string/beer"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="6dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/coffeeTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_coffee_24"
            android:text="@string/coffee"
            tools:layout_editor_absoluteX="278dp"
            tools:layout_editor_absoluteY="20dp" />

    </com.google.android.material.tabs.TabLayout>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="414dp"
        android:layout_height="709dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNextDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayoutCategory" />

    <Button
        android:id="@+id/buttonNextDrink"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:text="Prosegui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonBackDrink"
        android:layout_width="60dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNextDrink"
        app:layout_constraintEnd_toStartOf="@+id/buttonNextDrink"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonNextDrink"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/homeAsUpIndicator" />
</androidx.constraintlayout.widget.ConstraintLayout>